# langchain-ollama

./: README.md
001_ollama_gemma/: Ollama Gemma.ipynb
002_ollama_pdf_rag/: pyproject.toml  test.ipynb
003_gemma_gradio_chatbot/: main.py  pyproject.toml
004_ollama_gemma_colab/: colab.ipynb  ollama_gemma_colab.ipynb
005_langchain_serpapi_news_data/: SerpAPI_GoogleNews_Summary_Keyword.ipynb
006_gemma_peft_qlora_colab/: gemma_finetuning_koalpaca.ipynb
007_langchain_function_calling/: 01_langchain_function_calling.ipynb  02_langchain_function_calling_evaluation.ipynb
008_langchain_pdf_rag_huggingface_embedding_chroma_metadata_filtering/: pdf_rag_consumer_case_qa.ipynb
009_langchain_ragas_gemma2/: langchian_ragas_gemma2.ipynb
009_langchain_ragas_gemma2/corpus_data/: pandas_book_qa_final.xlsx
010_langchain_rag_hwp_table2markdown/: (첨부5) 2024년도 하반기 중남미 지역기구 파견인턴 선발 공고.hwpx  hwp_table_rag.ipynb
011_langchain_multimodal_pdf_image_extraction/: rag_finance_reports.ipynb
012_올라마 활용 로컬 RAG - 한국어 PDF 질의응답 (임베딩 성능, Semantic Chunkig)/: LangChain_Ollama_Local_RAG_Korean.ipynb
013_ollama_gemini_text2sql_QA_RAG/: Text_to_SQL.ipynb
