[tool.poetry]
name = "ollama-pdf-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
langchain = "0.1.13"
rapidocr-onnxruntime = "1.3.15"
pypdf = "4.1.0"
chromadb = "0.4.24"
sentence-transformers = "2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
